header started, images added and subpages created

--- a/index.html
+++ b/index.html
@@ -9,27 +9,28 @@
 </head>
 <body>
     <div class="header">
-        <p class="hlogo">Test header</p>
+        <p>Max Coffee House</p>
         <ul>
-            <li>Header link one</li>
-            <li>Header link two</li>
-            <li>Header link three</li>
+            <li><a href="/about/about.html">About me</a></li>
+            <li><a href="/coffee/coffee.html">About coffee</a></li>
+            <li><a href="/contact/contact.html">Contact us</a></li>
         </ul>
     </div>
     <div class="body">
         <div class="awesome"></div>
-            <p>This website is awesome</p>
-            <p>This website has some subtext that goes here under the main title. 
-                It's a smaller font and the collor is lower contrast
+            <p>Coffe house is amazing!</p>
+            <p>Coffee is something a lot of people consume, but never truly
+                Understand the grasp of the importance of Fika. Let's dive into it
             </p>
             <button>Sign up</button>
+            <img src="/img/beans.jpg" alt="Coffe beans" width="300px">
         <div class="randominfo">
             <h3>Some random information</h3>
         </div>
         <div class="quote">
             <blockquote>
                 <p>This is an inpsiring quote,  or a testimonial from a customer. 
-                    Maybe it is just filling up space, or maybe poeple will actually read it. Who knows?
+                    Maybe it is just filling up space, or maybe people will actually read it. Who knows?
                 All I know is that it looks nice.</p>
             </blockquote>
         </div>
