Hero banner complete with content

--- a/index.html
+++ b/index.html
@@ -17,15 +17,36 @@
         </ul>
     </div>
     <div class="body">
-        <div class="awesome"></div>
-            <p>Coffe house is amazing!</p>
-            <p>Coffee is something a lot of people consume, but never truly
-                Understand the grasp of the importance of Fika. Let's dive into it
-            </p>
-            <button>Sign up</button>
-            <img src="/img/beans.jpg" alt="Coffe beans" width="300px">
+        <div class="awesome">
+            <div class="someinfo">
+                <h2>Coffe house is amazing!</h2>
+                <p>Coffee is something a lot of people consume, but never truly
+                    understand the grasp of the importance of Fika. Let's dive into it
+                </p>
+                <button class="button1">Sign up</button>
+            </div>                        
+            <img src="/img/beans.jpg" class="someimg"  alt="Coffe beans">
+        </div>  
         <div class="randominfo">
             <h3>Some random information</h3>
+            <div class="container">
+                <div class="info">
+                    <img src="/img/laptop.jpg" class="infoimg" alt="laptop">
+                    <div class="text">Having coffee will make programming more efficient!</div>
+                </div>
+                <div class="info">
+                    <img src="/img/study.jpg" class="infoimg" alt="studying">
+                    <div class="text">You will also study better when you have it</div>
+                </div>
+                <div class="info">
+                    <img src="/img/tankar.jpg" class="infoimg" alt="Reading">
+                    <div class="text">Reading is also cozier to do</div>
+                </div>
+                <div class="info">
+                    <img src="/img/workplace.jpg" class="infoimg" alt="workplace">
+                    <div class="text">Not only that, it will make your workplace much better</div>
+                </div>
+            </div>
         </div>
         <div class="quote">
             <blockquote>
