--- a/index.html
+++ b/index.html
@@ -50,15 +50,19 @@
         </div>
         <div class="quote">
             <blockquote>
-                <p>This is an inpsiring quote,  or a testimonial from a customer. 
-                    Maybe it is just filling up space, or maybe people will actually read it. Who knows?
-                All I know is that it looks nice.</p>
+                <p>May your coffee be strong and your Monday be short. Today’s good mood is sponsored by coffee.
+                    Three cups of coffee a day keeps the doctor away!</p>
             </blockquote>
+            <figcaption>- Me, Max</figcaption>
         </div>
-        <div class="cta">
-            <h3>Call to action! It's time!</h3>
-            <p>Sign up for our product by clicking that button right over there!</p>
-            <button>Sign up</button>
+        <div class="calltoaction">
+            <div class="cta">
+                <div class="ctatext">
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button class="ctabutton">Sign up</button>
+            </div>
         </div>
     </div>
     <div class="footer">
